# ll-vq-vae

./: .gitignore  LICENSE  README.md  callbacks.py  components.py  data_modules.py  model.py  pyproject.toml  quantizer.py  requirements.txt  run.sh  train.py
configs/: config.yaml
configs/dataset/: celeba.yaml  cifar10.yaml  fashion-mnist.yaml  ffhq1024.yaml  mnist.yaml
configs/model/: latq-vae.yaml  lattice-vae.yaml  ll-vq-vae.yaml  vq-vae-ema.yaml  vq-vae.yaml
configs/quantizer/: lattice.yaml  vq-ema.yaml  vq.yaml
experiments/: callbacks.py  evaluate_checkpoint.py  run.sh  train.py  utils.py
experiments/configs/: config.yaml  eval.yaml
experiments/configs/dataset/: celeba.yaml  fashion-mnist.yaml  ffhq1024.yaml
experiments/configs/quantizer/: dense_lattice.yaml  sparse_lattice.yaml  sparse_lattice_no_init_b.yaml  vq-ema.yaml  vq.yaml
experiments/data_modules/: __init__.py  celeba.py  fashion_mnist.py  ffhq1024.py
experiments/pretrained/celeba/: dense_lattice.ckpt  sparse_lattice.ckpt  vq-ema.ckpt  vq.ckpt
experiments/pretrained/fashion-mnist/: dense_lattice.ckpt  sparse_lattice.ckpt  vq-ema.ckpt  vq.ckpt
experiments/pretrained/ffhq1024/: dense_lattice.ckpt  sparse_lattice.ckpt  vq-ema.ckpt  vq.ckpt
experiments/reconstructions/celeba/: sparse_lattice.json  vq-ema.json  vq.json
experiments/reconstructions/fashion-mnist/: sparse_lattice.json  vq-ema.json  vq.json
experiments/reconstructions/ffhq1024/: sparse_lattice.json  vq-ema.json  (+1 more)
vector_quantizer/: __init__.py  lattice_quantizer.py  quantizer.py  vector_quantizer.py  vector_quantizer_ema.py
